<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/background_dark"
        android:contentDescription="@string/image_description" />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ola"
        android:textAlignment="center" />
    <Button
        android:id="@+id/bt_load_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callLoadImage"
        android:text="@string/carregar_imagem" />
    <Button
        android:id="@+id/bt_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callWriteOnSDCard"
        android:text="@string/escrever_cartao_sd" />
    <Button
        android:id="@+id/bt_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callReadFromSDCard"
        android:text="@string/ler_cartao_sd" />
    <Button
        android:id="@+id/bt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callAccessLocation"
        android:text="@string/acessar_localizacao" />
</LinearLayout>